[package]
name = "fadvise"
description = "Call posix_fadvise on a specific file."
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Hiroaki Goto <goto.inct@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/StoneDot/linux-tools"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "linux", "utility", "file"]

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
clap_complete = "3.2.4"
nix = "0.25.0"
